--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "dotenv": "^8.2.0",
     "koa": "^2.11.0",
     "koa-router": "^8.0.6",
-    "mocha": "^7.0.1"
+    "mocha": "^7.0.1",
+    "mongoose": "^5.8.11"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
