--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,10 +11,7 @@
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
+    "parser": "babel-eslint",
     "rules": {
         "no-unused-vars": 0
     }
