--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha tests/*.js",
-    "start": "node app.js"
+    "test": "eslint . && mocha tests/*.js",
+    "start": "nodemon --exec babel-node app.js",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix" 
   },
   "repository": {
     "type": "git",
@@ -33,8 +35,14 @@
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint-plugin-import": "^2.20.1",
+    "nodemon": "^2.0.2"
   }
 }
