--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.6",
     "mocha": "^7.0.1",
     "mongoose": "^5.8.11"
