--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "scripts": {
     "test": "eslint . && mocha --require babel-polyfill --require @babel/register ./tests/*.js",
-    "start": "nodemon --exec babel-node app.js",
+    "dev": "nodemon --exec babel-node app.js",
     "lint": "eslint .",
-    "lint-fix": "eslint . --fix"
+    "lint-fix": "eslint . --fix",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build . --ignore node_modules/ -s",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/app.js"
   },
   "repository": {
     "type": "git",
@@ -39,9 +43,9 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
+    "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
-    "babel-polyfill": "^6.26.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
