--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "scripts": {
     "test": "eslint . && mocha --require babel-polyfill --require @babel/register ./tests/*.js",
-    "dev": "nodemon --exec babel-node app.js",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
+    "dev": "nodemon --exec babel-node ./src/app.js",
+    "lint": "eslint ./src",
+    "lint-fix": "eslint ./src --fix",
     "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel -d ./build . --ignore node_modules/ -s",
+    "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
     "start": "npm run build && node ./build/app.js"
   },
