--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.6",
     "mocha": "^7.0.1",
-    "mongoose": "^5.8.11"
+    "mongoose": "^5.8.11",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
