--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.6",
+    "lodash": "^4.17.15",
     "mocha": "^7.0.1",
     "mongoose": "^5.8.11"
   },
