--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "koa-router": "^8.0.6",
     "lodash": "^4.17.15",
     "mocha": "^7.0.1",
-    "mongoose": "^5.8.11"
+    "mongoose": "^5.8.11",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
