--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
-    "start": "node ./build/app.js"
+    "start": "node ./build/app.js",
+    "doc": "./node_modules/.bin/esdoc"
   },
   "repository": {
     "type": "git",
@@ -34,12 +35,16 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "import-modules": "^2.0.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.6",
     "lodash": "^4.17.15",
     "mocha": "^7.0.1",
     "mongoose": "^5.8.11",
+    "node-schedule": "^1.3.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
