#21 (update) websocket config has it's own separated file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "quotes": 1,
         "prefer-const": 1,
         "comma-dangle" :1,
-        "spaced-comment": 1
+        "spaced-comment": 1,
+        "eqeqeq": 0
     }
 }
