--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "eslint . && mocha --require babel-polyfill --require @babel/register ./tests/*.js",
-    "dev": "nodemon --exec babel-node ./src/app.js",
+    "test": "eslint ./src && mocha --require @babel/polyfill --require @babel/register ./src/tests/*.js",
+    "test-no-lint": "mocha --require @babel/polyfill --require @babel/register ./src/tests/*.js",
+    "dev": "nodemon --exec babel-node ./src/index.js",
     "lint": "eslint ./src",
     "lint-fix": "eslint ./src --fix",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
-    "start": "node ./build/app.js",
+    "start": "node ./build/index.js",
     "doc": "./node_modules/.bin/esdoc"
   },
   "repository": {
@@ -47,7 +48,8 @@
     "mocha": "^7.0.1",
     "mongoose": "^5.8.11",
     "node-schedule": "^1.3.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "ws": "^7.2.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -57,11 +59,11 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
     "babel-eslint": "^10.0.3",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "nodemon": "^2.0.2",
-    "esdoc": "^1.1.0",
-    "esdoc-standard-plugin": "^1.0.0"
+    "nodemon": "^2.0.2"
   }
 }
