--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,8 @@
         "--require", 
         "@babel/register",
         "--colors",
+        "--timeout",
+        "5000",
         "./src/tests/*.js"
       ],
       "internalConsoleOptions": "openOnSessionStart",
