--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "eslint ./src && mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/*.js",
     "test-no-lint": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/*.js",
-    "test-tom": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/testws.js",
+    "test-ws": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/testws.js",
+    "test-gt": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/test.gameTemplate.js",
     "test-gaetan": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/testParrain.js",
     "dev": "nodemon --exec babel-node ./src/index.js",
     "lint": "eslint ./src",
@@ -64,7 +65,7 @@
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2"
   }
