--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "eslint ./src && mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/*.js",
     "test-no-lint": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/*.js",
-    "test-ws": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/testws.js",
+    "test-ws": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 --bail ./src/tests/testws.js",
     "test-gt": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/test.gameTemplate.js",
     "test-gaetan": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/testParrain.js",
     "dev": "nodemon --exec babel-node ./src/index.js",
