--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "eslint ./src && mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/*.js",
     "test-no-lint": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/*.js",
     "test-ws": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 --bail ./src/tests/testws.js",
+    "test-pr": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 --bail ./src/tests/test.parrain.js",
     "test-gt": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/test.gameTemplate.js",
     "test-gaetan": "mocha --require @babel/polyfill --require @babel/register --timeout 5000 ./src/tests/testParrain.js",
     "dev": "nodemon --exec babel-node ./src/index.js",
@@ -62,6 +63,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
     "babel-eslint": "^10.0.3",
+    "chai-spies": "^1.0.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.8.0",
