--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha": "^7.0.1",
     "mongoose": "^5.8.11",
     "node-schedule": "^1.3.2",
+    "sinon-chai": "^3.5.0",
     "socket.io": "^2.3.0",
     "ws": "^7.2.5"
   },
@@ -69,6 +70,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "sinon": "^9.0.2"
   }
 }
