--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,27 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Mocha getget",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "--require",
+        "@babel/polyfill",
+        "--require", 
+        "@babel/register",
+        "--colors",
+        "--timeout",
+        "5000",
+        //"--bail",
+        "./src/tests/test.parrain.js"
+      ],
+      "internalConsoleOptions": "openOnSessionStart",
+      "skipFiles": [
+        "<node_internals>/**"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Mocha Tests",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
       "args": [
